--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@ html {
 }
 
 .nav-menu > ul > li {
-  font-size: 1.2vw;
+  font-size: clamp(15px, 1vw, 22px);
 }
 
 .grey-hero {
@@ -18,12 +18,12 @@ html {
 }
 
 .name-title {
-  font-size: clamp(13px, 1.8vw, 24px);
+  font-size: clamp(15px, 1.5vw, 28px);
 }
 
 .web-title {
   font-size: 8.8vw;
-  margin-top: -5%;
+  margin-top: clamp(-10%, 50vw, -5%);
 }
 
 .javascript-hero-title {
