--- a/components/main/skills/skils.css
+++ b/components/main/skills/skils.css
@@ -4,7 +4,7 @@
 }
 
 .skills-title {
-  font-size: clamp(13px, 3vw, 24px);
+  font-size: clamp(14px, 3vw, 24px);
 }
 
 .skilss-title-image-contain > img {
@@ -16,7 +16,7 @@
   background-size: cover; /* Atur gambar agar memenuhi seluruh area div */
   background-repeat: no-repeat; /* Mencegah pengulangan gambar latar belakang */
   background-position: center center;
-  /* transform: translateY(100vh); */
+  transform: translateY(100vh);
   opacity: 0;
 }
 
