--- a/components/main/projects/projects.css
+++ b/components/main/projects/projects.css
@@ -1,12 +1,46 @@
+.projects-trigger {
+  @apply flex justify-center;
+}
+.projects-trigger {
+  height: 350vh;
+}
+
+.projects-container {
+  @apply overflow-hidden bg-grey flex justify-center items-center fixed top-1/2 w-full;
+}
+
+.projects-container {
+  transform: translateY(50vh);
+  width: 100vw;
+  display: flex;
+  justify-content: center; /* Menengahkan secara horizontal */
+  align-items: center; /* Menengahkan secara vertikal */
+}
+
+.crossline {
+  @apply bg-main w-full tracking-[0.3em];
+}
+
+.title-box-portofolio {
+  @apply text-dark border-2  m-auto p-1 font-neuebit overflow-hidden flex relative;
+}
+
 .title-box-portofolio {
   font-size: clamp(40px, 5vw, 50px);
   font-weight: 700;
 }
 
 .running-text {
+  @apply flex items-center gap-5 w-full absolute;
+}
+
+.running-text {
   animation: runningAnimation 10s linear infinite;
 }
 
+.running-text-2 {
+  @apply flex items-center gap-5 w-full;
+}
 .running-text-2 {
   animation: runningAnimation2 10s linear infinite;
   animation-delay: 5s; /* Tambahkan waktu delay 1 detik */
@@ -15,22 +49,6 @@
 .portofolio-text-empty {
   text-shadow: -1px -1px 0 #0f0f0f, 1px -1px 0 #0f0f0f, -1px 1px 0 #0f0f0f, 1px 1px 0 #0f0f0f;
   color: #fc6d1d;
-}
-
-.main-text-portofolio {
-  font-size: clamp(3px, 0.5vw, 18px);
-}
-
-.project-cards {
-  height: 75vh;
-}
-
-.Projects-container {
-  transform: translateY(50vh);
-}
-
-.projects-trigger {
-  height: 350vh;
 }
 
 /* ------------------------------------------------ ANIMATE ---------------------------------------------------- */
