--- a/components/main/projects/projectscard.css
+++ b/components/main/projects/projectscard.css
@@ -1,5 +1,5 @@
 .project-cards {
-  @apply absolute top-1/2 left-1/2 flex flex-col border-4 border-dark;
+  @apply absolute top-1/2 left-1/2 flex flex-col border-4 border-dark w-2/3 sm:w-3/6 md:w-4/12 lg:w-3/12;
 }
 
 .project-cards {
@@ -8,6 +8,7 @@
   cursor: grab; /* Mengganti kursor mouse menjadi grab */
   transition: "transform 0.5s" !important;
   transform-origin: center;
+  font-size: clamp(11px, 3vw, 16px);
 }
 
 .rotate-transition {
@@ -26,7 +27,7 @@
   border-right: solid #0f0f0f 3px;
 }
 .project-desc > p {
-  font-size: clamp(11px, 5vw, 16px);
+  font-size: clamp(11px, 3vw, 16px);
 }
 
 .footer-project-cards {
